--- a/assets/style.sass
+++ b/assets/style.sass
@@ -1,18 +1,34 @@
 $border: 1px solid #9b9b9b
 
+@font-face
+  font-family: Comfortaa
+  src: url(comfortaa.ttf)
+
 body
   font-family: "Segoe UI", Ubuntu, "Droid Sans", sans-serif
   text-align: center
   margin: 0
 
+#title
+  float: left
+  margin: 0
+  font-size: 1.7em
+  font-weight: bold
+  color: #999999
+  font-family: Comfortaa, serif
+
+nav svg
+  float: left
+
 nav
-  text-align: left
   background-color: #F8F8F8
-  border: 1px solid #E7E7E7
+  border-bottom: 1px solid #E7E7E7
+  text-align: right
+
 
 nav *
   line-height: 50px
-  margin-left: 1vw
+  margin-right: 1vw
 
 nav a
   color: #555
@@ -23,6 +39,9 @@ nav span
 
 nav a:hover
   text-shadow: 0 0 2px #9b9b9b
+
+article, form
+  float: none
 
 article
   margin: 30vh auto
@@ -56,7 +75,7 @@ form input:focus
 #buttons span
   border-bottom: none
 
-#buttons button
+#buttons > button, #avatar
   display: block
   float: right
   border: 1px solid transparent
@@ -64,6 +83,9 @@ form input:focus
   margin-top: 1vh
   padding: 1vmin
   background-color: transparent
+
+#avatar
+  opacity: 0.7
 
 #buttons button:hover
   border: $border
