--- a/assets/style.sass
+++ b/assets/style.sass
@@ -17,28 +17,40 @@ body
   color: #999999
   font-family: Comfortaa, serif
 
-nav svg
+header svg
   float: left
 
-nav
-  background-color: #F8F8F8
+header
   border-bottom: 1px solid #E7E7E7
   text-align: right
 
+header, footer
+  background-color: #F8F8F8
 
-nav *
+header *, footer *
   line-height: 50px
+
+header a, header span
   margin-right: 1vw
 
-nav a
+header a, footer a
   color: #555
   text-decoration: none
 
-nav span
+header span, footer span
   color: #999
 
-nav a:hover
+header a:hover, footer a:hover
   text-shadow: 0 0 2px #9b9b9b
+
+footer
+  position: fixed
+  bottom: 0
+  width: 100%
+  border-top: 1px solid #E7E7E7
+
+footer a, footer span
+  margin: auto 1vw
 
 article, form
   float: none
